# ai-knowledge-platform

./: .gitignore  Makefile  brain.md  pnpm-lock.yaml  pyproject.toml
.ai/: claude-workflow.md  development-standards.md
apps/api/: main.py  pyproject.toml
apps/api/middleware/: error_handler.py
apps/api/routers/: __init__.py  chat.py  health.py  interview.py  knowledge.py
context/: architecture-decisions.md
project-kit/.ai/: claude-workflow.md  development-standards.md
project-kit/context/: project-overview.md  tech-stack.md
project-kit/specs/current/: ai-engine.md  api-spec.md  data-model.md
project-kit/tasks/: v1-task-breakdown.md
specs/current/: architecture.md  frontend.md  knowledge-core.md  v1-overview.md
tasks/: backlog.md  v1-task-breakdown.md
